# IPA_parser

./: .gitignore  AGENTS.md  CONTRIBUTING.md  IPA.ipynb  IPA_parser.code-workspace  NorthernTepehuan_auto.xlsx  Northwest_Sahaptin_auto.xlsx  QMD_WORKFLOW.md  README.md  TODO.md  example.py  ipa_classes.py  main.py  output.xlsx  patch_update_1_completed.md  patch_update_2.md  pyproject.toml  requirements.txt  test.csv
.instructions/: MEMORY.md  best-practices.md
IPA/: __init__.py  debug.py  dict_loader.py  ipa_char.py  ipa_string.py
IPA/data/: IPA_Table.json
Sheets/: 230512_Japanese_Lily (6).xlsx  230602_Northern Tepehuan_Lily (2).xlsx  230602_Northern Tepehuan_Lily (3).xlsx  230602_Northern Tepehuan_Lily (4).xlsx  230602_Northern Tepehuan_Lily (5).xlsx  230602_Northern Tepehuan_Lily.xlsx  230606_Shiwilu_Lily (6).xlsx  NorthernTepehuan.xlsx  NorthwestSahaptin.xlsx  output.xlsx  test.csv
classes/: debug.py  ipa_char.py  ipa_string.py
data/: IPA_Table.json
data/language_settings/: French.toml  Italian.toml  Kumzari.toml  Lithuanian_Callan.toml  Mavea.toml  Northern_Tepehuan.toml  Northwest_Sahaptin.toml  Oriental_Hebrew.toml  README.md  Shiwilu.toml  Slovene_Male.toml  Swedish.toml  Tausug.toml  Zwara_Berber.toml
data/unprocessed/: Kumzari.xlsx  Swedish.xlsx  (+5 more)
language_settings/: Italian  Northern_Sahaptin  Northern_Tepehuan  Northwest_Sahaptin  ZwaraBerber
notebooks/: Ling199_Sheet_Automator.ipynb
scripts/: ipa_parser.py  qmd-doctor.sh  qmd-start.sh
tests/: conftest.py  test_cli.py  test_config.py  test_ipa_char.py  test_ipa_string.py  test_tie_bar.py
(+15 files in other folders)
